Fix overflow issues

--- a/static/src/styles/nova_sessio.scss
+++ b/static/src/styles/nova_sessio.scss
@@ -17,9 +17,12 @@
     padding: 40px;
     background-color: $black;
     border-radius: 15px;
+    width: 700px;
     max-width: 700px;
     margin: 0 auto;
     color: $white;
+    min-height: 400px;
+    box-sizing: border-box;
 
     .sessio-header {
         margin-bottom: 20px;
@@ -55,6 +58,9 @@
             flex-wrap: wrap;
             gap: 10px;
             margin-bottom: 20px;
+
+            max-height: calc(55px * 6 + 10px *3);
+            overflow-y: auto;
 
             .card {
                 background-color: $dark-grey;
